<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trip_planner_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/bart_primary1">

    <Spinner
        android:id="@+id/orig_spinner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="@dimen/spinner_margin"
        android:layout_marginRight="@dimen/spinner_margin"
        android:background="@drawable/rounded_buttons" />

    <Spinner
        android:id="@+id/dest_spinner"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/spinner_height"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/spinner_margin"
        android:layout_marginRight="@dimen/spinner_margin"
        android:layout_below="@+id/orig_spinner"
        android:background="@drawable/rounded_buttons" />

    <Button
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_below="@+id/dest_spinner"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/my_location"
        android:background="@drawable/rounded_buttons" />

    <ImageView
        android:id="@+id/my_location"
        android:layout_width="24dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirm"
        android:layout_alignTop="@+id/confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/ic_location" />

    <Button
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_alignBottom="@+id/confirm"
        android:layout_toEndOf="@+id/my_location"
        android:background="@drawable/rounded_buttons" />

</RelativeLayout>