<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trip_overview_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/trip_overview_layout"
        android:layout_width="match_parent"
...
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/bart_primary1"
                android:visibility="gone" />

            <TextView
                android:id="@+id/empty_overview_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/empty_overview_list_view"
                android:textSize="24sp"
...
                android:id="@+id/station_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.sanderp.bartrider.view.AutoResizeTextView
                    android:id="@+id/trip_header"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/empty_field"
                    android:textSize="20sp"
...
                android:text="@string/fare_info"
                android:textSize="12sp" />

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:tint="@color/material_light"
            app:srcCompat="@drawable/ic_add"
...
