<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TripOverviewActivity">

    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/action_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_advisory"
        android:icon="@drawable/ic_menu_advisory"
        android:title="@string/action_advisory"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bart_map"
        android:title="@string/action_bart_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reverse_trip"
        android:title="@string/action_reverse_trip"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sfbart_twitter"
        android:title="@string/action_sfbart_twitter"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sfbartalert_twitter"
        android:title="@string/action_sfbartalert_twitter"
        app:showAsAction="never" />
</menu>
