...
            android:gravity="center"
            android:text="@string/empty_favorites_list_view"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/favorites_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice" />

    </RelativeLayout>

...
